# global_parcels

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/app/: config.py  consumer.py  db.py  fill_db.py  main.py  producer.py  utils.py
backend/app/app/api/: health_check.py  parcel.py  parcel_type.py
backend/app/app/models/: pydantic.py  tortoise.py
backend/app/migrations/models/: 0_20231126131206_init.py
backend/app/tests/: conftest.py  test_app.py  test_parcels.py
db/: init.sql
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/(root)/: layout.tsx  page.tsx
frontend/src/app/my-parcels/: layout.tsx  page.tsx
frontend/src/app/parcels/[[...parcelsId]]/: page.tsx
frontend/src/components/: CreateForm.tsx  Layout.tsx  Menu.tsx  Navbar.tsx
