[tool.poetry]
name = "global-parcel"
version = "0.1.0"
description = "GlobaParcel is a microservice for international delivery service"
authors = ["Vital D. <netmin@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["session"], version = "^0.104.1"}
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
asyncmy = "0.2.8"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
tortoise-orm = { extras = ["asyncmy"], version = "^0.20.0" }
aerich = "^0.7.2"
itsdangerous = "^2.1.2"
asgi-lifespan = "^2.1.0"
pika = "^1.3.2"
aio-pika = "^9.3.1"
python-multipart = "^0.0.6"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
pytest-mock = "^3.12.0"


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["./tests"]
markers = "asyncio: marks tests as async (to be run with asyncio)"
filterwarnings = ["ignore::DeprecationWarning::"]